Crash in image_listener #38400

Closed
opened 2014-01-29 19:55:42 +01:00 by Tom Edwards · 6 comments

System Information
Win7 x64, GTX 560

Blender Version
Broken: git latest (6c329304)
Worked: unknown

Short description of error
The WM notification listener image_listener does this:

Object *ob = (Object *)wmn->reference;
if (ob && (ob->mode & OB_MODE_EDIT))

If this is happening after a Python script has run, it's entirely possible that wmn->reference is a hanging pointer.

Other listener functions check whether reference == NULL without actually trying to dereference it.

Exact steps for others to reproduce the error
Unfortunately I don't have a simple repro for this. I can trigger the crash reliably by running a very complex script on a very complex file; the crash happens when the Image Editor tries to refresh after the script finishes.

**System Information** Win7 x64, GTX 560 **Blender Version** Broken: git latest (6c329304) Worked: unknown **Short description of error** The WM notification listener `image_listener` does this: ``` Object *ob = (Object *)wmn->reference; if (ob && (ob->mode & OB_MODE_EDIT)) ``` If this is happening after a Python script has run, it's entirely possible that `wmn->reference` is a hanging pointer. Other listener functions check whether `reference == NULL` without actually trying to dereference it. **Exact steps for others to reproduce the error** Unfortunately I don't have a simple repro for this. I can trigger the crash reliably by running a very complex script on a very complex file; the crash happens when the Image Editor tries to refresh after the script finishes.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @artfunkel

Added subscriber: @artfunkel

This issue was referenced by blender/blender-addons-contrib@dd684f5a04

This issue was referenced by blender/blender-addons-contrib@dd684f5a0414e9f2882a4861de489e50ea1ddb2e

This issue was referenced by dd684f5a04

This issue was referenced by dd684f5a0414e9f2882a4861de489e50ea1ddb2e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit dd684f5a04.

Closed by commit dd684f5a04.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38400
No description provided.